Solved Issue #28 & Issue # 17 : Checkout page UI enhancements and Footer copyright text

--- a/public/front/views/layouts/footer.html
+++ b/public/front/views/layouts/footer.html
@@ -3,7 +3,7 @@
     <div class="inner">
         <div class="footer-bottom">
             <div class="container">
-                <span class="left">(C) Sportofitt, All rights reserved</span>
+                <span class="left">(c) 2016 Aquanta Consulting Services LLP</span>
                             <span class="right">
                                 <a href="#page-top" class="to-top roll"><i class="fa fa-angle-up"></i></a>
                             </span>
