--- a/public/front/views/layouts/navbar.html
+++ b/public/front/views/layouts/navbar.html
@@ -14,6 +14,7 @@
                 <ul ng-if="isAuthenticated" class="user-area">
                     <li><a ui-sref="app.logout">Sign Out</a></li>
                    <li><a ui-sref="app.profile"><strong>Profile</strong></a></li>
+                    <li><a ui-sref="app.mybookings"><strong>My Bookings</strong></a></li>
 
                 </ul>
 
