--- a/public/front/views/layouts/footer.html
+++ b/public/front/views/layouts/footer.html
@@ -1,15 +1,21 @@
 <!--Page Footer-->
-<footer id="page-footer">
     <div class="inner">
         <div class="footer-bottom">
             <div class="container">
                 <span class="left">(c) 2016 Aquanta Consulting Services LLP</span>
                             <span class="right">
-                                <a href="#page-top" class="to-top roll"><i class="fa fa-angle-up"></i></a>
+                              <div class="pull-right">
+                                  <ul class="list-inline">
+                                      <li><a ui-sref="app.about">About Us</a></li> |
+                                      <li><a ui-sref="app.terms">Terms</a></li> |
+                                      <li><a ui-sref="app.privacy">Privacy Policy</a></li>|
+                                      <li><a ui-sref="app.contact">Contact Us</a></li>|
+                                      <li><a ui-sref="app.faq">FAQ</a></li>
+                                  </ul>
+                              </div>
                             </span>
             </div>
         </div>
         <!--/.footer-bottom-->
     </div>
-</footer>
 <!--end Page Footer-->
