--- a/public/front/views/main.html
+++ b/public/front/views/main.html
@@ -1,3 +1,3 @@
 <header ui-view="nav"></header>
 <main ui-view="body"></main>
-<footer ui-view="footer"></footer>
+<footer ui-view="footer" id="page-footer"></footer>
