--- a/public/front/views/layouts/footer.html
+++ b/public/front/views/layouts/footer.html
@@ -10,7 +10,8 @@
                                       <li><a ui-sref="app.terms">Terms</a></li> |
                                       <li><a ui-sref="app.privacy">Privacy Policy</a></li>|
                                       <li><a ui-sref="app.contact">Contact Us</a></li>|
-                                      <li><a ui-sref="app.faq">FAQ</a></li>
+                                      <li><a ui-sref="app.faq">FAQ</a></li>|
+                                      <li><a href="select" target="_blank">Become A Select Partner</a></li>
                                   </ul>
                               </div>
                             </span>
