--- a/public/front/views/layouts/navbar.html
+++ b/public/front/views/layouts/navbar.html
@@ -4,6 +4,9 @@
         <div class="brand">
             <a ui-sref="app.home"><img src="assets/images/logo.png" alt="logo" style="max-width: 72%;margin-bottom: 0"></a>
         </div>
+        <div>
+            <span class="btn "  ><a href="select" target="_blank">Become A Select Partner</a></span>
+        </div>
         <nav class="navigation-items">
             <div class="wrapper">
                 <ul class="main-navigation navigation-top-header"></ul>
