--- a/public/front/views/login/index.html
+++ b/public/front/views/login/index.html
@@ -53,6 +53,9 @@
                             </div><!-- /.form-group -->
                             <div class="form-group clearfix">
                                 <button type="submit" class="btn pull-right btn-default" id="account-submit">Sign In</button>
+                                <div class="margin-top-10 links cl-effect-17">
+                                    <a ui-sref="app.forget-password" >Forgot Password?</a>
+                                </div>
                             </div><!-- /.form-group -->
                         </form>
                     </div>
