--- a/public/front/views/orderconfirmation/index.html
+++ b/public/front/views/orderconfirmation/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="col-md-offset-3 col-md-6">
                     <div class="margin-top-10 links cl-effect-17">
-                        <a href="#" >Forgot Password?</a>
+                        <a ui-sref="app.forget-password" >Forgot Password?</a>
                     </div>
                 </div>
             </div>
@@ -88,6 +88,24 @@
                                         Phone number
                                     </label>
                                     <input type="text" restrict="reject" mask="(999) 999-9999" clean="true" name="mobile" data-ng-model="vm.user.phone_no"  class="form-control" placeholder="Enter your Phone number" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row" ng-if="!isAuthenticated">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>
+                                        Password
+                                    </label>
+                                    <input type="text" name="password" data-ng-model="vm.user.password"  class="form-control" placeholder="Enter your Password" required>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="control-label">
+                                        Confirm Password
+                                    </label>
+                                    <input type="text"  name="confirm_password" data-ng-model="vm.user.confirm_password"  class="form-control" placeholder="Conform Password" required>
                                 </div>
                             </div>
                         </div>
@@ -173,7 +191,7 @@
                                 <span class="text-bold">Order Total</span>
                             </div>
                             <div class="col-sm-2">
-                                <span class="text-large"><i class="fa fa-inr"></i> {{vm.LocalBookings.booking_amount}}</span>
+                                <span class="text-large"><i class="fa fa-inr"></i> {{vm.LocalBookings.discounted_price}}</span>
                             </div>
                         </div>
                         <hr/>
@@ -184,9 +202,7 @@
                                 </span>
                             </div>
                             <div class="col-sm-4">
-                                <button  ng-if="isAuthenticated" class="btn btn-default"  type="submit">PLACE ORDER</button>
-
-                                <a  ng-if="!isAuthenticated" class="btn btn-default" onclick="alert('Please sign in first');" >PLACE ORDER</a>
+                                <button class="btn btn-default"  type="submit">PLACE ORDER</button>
                             </div>
                         </div>
                     </div>
@@ -202,7 +218,8 @@
                                         <h2>{{vm.LocalBookings.selectedSlot}}</h2>
                                     </div>
                                     <div class="border-left col-md-6">
-                                        <span class="text-small">{{vm.LocalBookings.date | date  : "EEEE"}}</span>
+                                        <h3>{{vm.LocalBookings.date | date : "fullDate"}}</h3>
+                                        <!--<span class="text-small">{{vm.LocalBookings.date | date  : "EEEE"}}</span>-->
                                     </div>
                                 </div>
                             </div>
@@ -224,17 +241,17 @@
                                         <span class="text-large">{{vm.LocalBookings.name}}</span>
                                     </div>
                                     <div class="col-md-4">
-                                        <span class="text-large"><i class="fa fa-inr"></i> {{vm.LocalBookings.booking_amount}}</span>
+                                        <span class="text-large"><i class="fa fa-inr"></i> {{vm.LocalBookings.discounted_price}}</span>
                                     </div>
                                 </div>
 
                                 <hr/>
                                 <div class="row">
                                     <div class="col-md-8">
-                                        <span class="text-large"><strong>Discount</strong></span>
+                                        <span class="text-large">Convenience Charges </span>
                                     </div>
                                     <div class="col-md-4">
-                                        <span class="text-large"><strong><i class="fa fa-inr"></i> {{vm.LocalBookings.discounted_amount}} ({{vm.LocalBookings.discount}}%)</strong></span>
+                                        <span class="text-large"><i class="fa fa-inr"></i> 0.00</span>
                                     </div>
                                 </div>
                                 <hr/>
@@ -243,7 +260,7 @@
                                         <span class="text-large"><strong>Order Subtotal</strong></span>
                                     </div>
                                     <div class="col-md-4">
-                                        <span class="text-large"><strong><i class="fa fa-inr"></i> {{vm.LocalBookings.booking_amount}}</strong></span>
+                                        <span class="text-large"><strong><i class="fa fa-inr"></i> {{vm.LocalBookings.discounted_price}}</strong></span>
                                     </div>
                                 </div>
 
