--- a/public/front/views/login/reset-password.html
+++ b/public/front/views/login/reset-password.html
@@ -42,32 +42,32 @@
                             <h1 class="page-title">Forget Password</h1>
                         </header>
                         <hr>
-                        <form role="form" id="form-sign-in-account" method="post" data-ng-submit="vm.requestNewPassword(vm.resetModel)">
+                        <form role="form" id="form-sign-in-account" method="post" data-ng-submit="vm.resetNewPassword(vm.resetModel)">
                             <div class="form-group"
-                                 ng-class="{'has-error':errors.email, 'has-success':!errors.email}">
+                                 ng-class="{'has-error':vm.errors.email, 'has-success':!vm.errors.email}">
 						<span class="input-icon"> <input type="email"
                                                          class="form-control" name="email" data-ng-model="vm.resetModel.email" placeholder="Email" > <i
                                 class="fa fa-envelope-o"></i>
 						</span>
-                                <span class="error text-small block" ng-if="errors.email">{{errors.email}}</span>
+                                <span class="error text-small block" ng-if="vm.errors.email">{{vm.errors.email}}</span>
                             </div>
                             <div class="form-group"
-                                 ng-class="{'has-error':errors.password, 'has-success':!errors.password}">
+                                 ng-class="{'has-error':vm.errors.password, 'has-success':!vm.errors.password}">
 						<span class="input-icon"> <input type="password"
                                                          class="form-control" name="password" data-ng-model="vm.resetModel.password"
                                                          placeholder="New password" > <i
                                 class="fa fa-password-o"></i>
 						</span>
-                                <span class="error text-small block" ng-if="errors.password">{{errors.password}}</span>
+                                <span class="error text-small block" ng-if="vm.errors.password">{{vm.errors.password}}</span>
                             </div>
                             <div class="form-group"
-                                 ng-class="{'has-error':errors.password_confirmation, 'has-success':!errors.password_confirmation}">
+                                 ng-class="{'has-error':vm.errors.password_confirmation, 'has-success':!vm.errors.password_confirmation}">
 						<span class="input-icon"> <input type="password"
                                                          class="form-control" name="password_confirmation" data-ng-model="vm.resetModel.password_confirmation"
                                                          placeholder="Confirm new password" > <i
                                 class="fa fa-password-o"></i>
 						</span>
-                                <span class="error text-small block" ng-if="errors.password_confirmation">{{errors.password_confirmation}}</span>
+                                <span class="error text-small block" ng-if="vm.errors.password_confirmation">{{vm.errors.password_confirmation}}</span>
                             </div>
                             <div class="form-group clearfix">
                                 <button type="submit" class="btn pull-right btn-default" id="account-submit">Sign In</button>
