--- a/public/front/views/login/reset-password.html
+++ b/public/front/views/login/reset-password.html
@@ -70,7 +70,7 @@
                                 <span class="error text-small block" ng-if="vm.errors.password_confirmation">{{vm.errors.password_confirmation}}</span>
                             </div>
                             <div class="form-group clearfix">
-                                <button type="submit" class="btn pull-right btn-default" id="account-submit">Sign In</button>
+                                <button type="submit" ng-disabled="vm.disableSubmit" class="btn pull-right btn-default" id="account-submit">Sign In</button>
                             </div><!-- /.form-group -->
                         </form>
                     </div>
