--- a/public/front/views/login/forget-password.html
+++ b/public/front/views/login/forget-password.html
@@ -52,7 +52,7 @@
                                 <span class="error text-small block" ng-if="vm.errors.email">{{vm.errors.email}}</span>
                             </div>
                             <div class="form-group clearfix">
-                                <button type="submit" class="btn pull-right btn-default" id="account-submit">Sign In</button>
+                                <button type="submit" ng-disabled="vm.disableSubmit" class="btn pull-right btn-default" id="account-submit">Sign In</button>
                             </div><!-- /.form-group -->
                         </form>
                     </div>
