--- a/public/front/views/login/index.html
+++ b/public/front/views/login/index.html
@@ -51,12 +51,14 @@
                                 <label for="form-sign-in-password">Password:</label>
                                 <input type="password" class="form-control" id="form-sign-in-password" data-ng-model="vm.password" name="form-sign-in-password" required>
                             </div><!-- /.form-group -->
+                            <div class="links cl-effect-17">
+                                <a ui-sref="app.forget-password" >Forgot Password?</a>
+                            </div>
                             <div class="form-group clearfix">
                                 <button ng-disabled="vm.disableSubmit" type="submit" class="btn pull-right btn-default" id="account-submit">Sign In</button>
-                                <div class="margin-top-10 links cl-effect-17">
-                                    <a ui-sref="app.forget-password" >Forgot Password?</a>
-                                </div>
+
                             </div><!-- /.form-group -->
+
                         </form>
                     </div>
                 </div>
